--- a/tex/agez_model.tex
+++ b/tex/agez_model.tex
@@ -164,7 +164,7 @@ The parameters  $z_i$ and $\epsilon_m$ are considered as unknown and estimated f
 \begin{figure}[h!]
 \centering
 \includegraphics[width=120mm]{figs/ZirconAge.pdf}
-\caption{Example of three zircons with estimated ages of 10, 14, and 17 Ma ($\mu$; indicated by the dashed vertical lines) and standard deviations ($\sigma + \epsilon$; shown by the gray shaded areas). The sampled true ages are indicated by the red circles. }
+\caption{Example of three zircons with measure ages of 10, 14, and 17 Ma ($\mu$; indicated by the dashed vertical lines and black triangles) and standard deviations ($\sigma + \epsilon$; shown by the gray shaded areas). The sampled true ages of the zircons are indicated by the red circles. }
 \label{f_zir_age}
 \end{figure}
 
