--- a/tex/agez_model.tex
+++ b/tex/agez_model.tex
@@ -103,12 +103,6 @@
 \newcommand{\TP}{{\theta^{\prime}}}
 \newcommand{\UB}{{\mathbf{u}}}
 
-\newcommand{\todo}[1]{{\textcolor{red}{[#1]}}}
-\newcommand{\cmt}[1]{{\textcolor{blue}{[#1]}}}
-\newcommand{\ds}[1]{{\textcolor{red}{[#1]}}}
-\newcommand{\rv}[1]{{\textcolor{blue}{#1}}}
-\newcommand{\cdb}[1]{{\textcolor{blue}{[#1]}}}
-
 \usepackage{lineno}
 
 \begin{document}
@@ -122,18 +116,18 @@
 \medskip
 \begin{center}
 
-\noindent{\Large \bf Age Zircon model}
+\noindent{\Large \bf \texttt{\sc{agez}} -- Age Zircon model}
 
-\iffalse
+\iftrue
 \bigskip
 \noindent {\normalsize \sc 
-Daniele Silvestro$^{1,2,3,4}$,
+Daniele Silvestro$^{1,2,3,4}$
 }
 \noindent {\small \it 
 
 
 $^1$Department of Biology, University of Fribourg, 1700 Fribourg, Switzerland;\\
-$^2$Swiss Institute of Bioinformatics, Quartier Sorge, 1015 Lausanne, Switzerland; \\
+$^2$Swiss Institute of Bioinformatics, 1700 Fribourg, Switzerland; \\
 $^3$Department of Biological and Environmental Sciences, University of Gothenburg, 413 19 Gothenburg, Sweden;\\
 $^4$Gothenburg Global Biodiversity Center, 413 19 Gothenburg, Sweden;\\
 }
